fix class loading